Fixed menu layout and hide overflow-y for page_content

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -29,6 +29,7 @@ body {
   right: 0;
   padding-left: 15px;
   padding-right: 15px;
+  overflow-y: hidden;
 }
 
 .container {
